# optimise2

./: DESCRIPTION  NAMESPACE  README.md  config.status  configure  configure.ac  configure.win
R/: iso1.R  lambdaSel.R  lmconst.R  optimise2.R
R/.svn/: entries
R/.svn/text-base/: optimise2.R.svn-base
instr/doc/: perf.eps  perf2.tex
man/: lambda_Select.Rd  lmcholsolve.Rd  lmconst.Rd  optimise2-package.Rd  optimise2.Rd  print.lambda_select.Rd  xixireg.isotonic.Rd
man/.svn/: entries
man/.svn/text-base/: optimise2-package.Rd.svn-base
src/: Makevars  RcallcMatrix.c  optimise2.cpp  symbols.rds
src/.svn/: entries
src/.svn/text-base/: Makevars.in.svn-base  optimise2.cpp.svn-base  symbols.rds.svn-base
